--- a/BLOG/1.md
+++ b/BLOG/1.md
@@ -1,4 +1,17 @@
-# TEST BLOG
-## п.к. Хач; Саранск, Кремль 25.08.2022
+---
+Author: <blue>п.к. Хач</blue>
+Date: 25.08.2022
+Time: 20:20
+Tag: Анекдоты
+Tag: Смешное
+---
 
-Первая запись на тупищво! Ура!
+- Таня, скажи Арбуз
+
+- Арбуз
+
+- Твой папа карапуз
+
+- Сергеев, месяц без секса
+
+- Ну Таааня
